--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@nuxtjs/auth": "^4.5.2",
     "@nuxtjs/axios": "^5.12.4",
+    "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-js-modal": "^2.0.0-rc.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@nuxtjs/fontawesome": "^1.1.2",
+    "nuxt-fontawesome": "^0.4.0"
+  }
 }
